syntax = "proto3";

package com.devproblems;

option java_multiple_files = true;

message Book {
  int32 book_id = 1;
  string title = 2;
  float price = 3;
  int32 pages = 4;
  int32 author_id = 5;
}

message Author {
  int32 author_id = 1;
  string first_name = 2;
  string last_name = 3;
  string gender = 4;
  int32 book_id = 5;
}

service BookAuthorService {
  //unary - synchronous
  //client sends 1 req and server responds with 1 res
  rpc getAuthor(Author) returns(Author){}

  //server-streaming - asynchronous
  //client will send 1 req and server will respond with stream of messages to the client.
  rpc getBooksByAuthor(Author) returns(stream Book) {}

  //client-streaming - asynchronous
  //client will send stream of messages and server will respond with one
  rpc getExpensiveBook(stream Book) returns (Book) {}

  //bi-directional streaming - asynchronous
  //client will send stream of messages and server will respond with stream of messages
  rpc GetBooksByAuthorGender(stream Book) returns(stream Book) {}



}